// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBar when passed detailed information correctly renders 1`] = `
<div
  className="alert alert-danger"
  role="alert"
>
  <p>
    <span
      className="font-weight-bold"
    >
      Nerdy error!
    </span>
    <span>
       | 
      Details...
    </span>
  </p>
</div>
`;

exports[`ErrorBar when passed no detail correctly renders 1`] = `
<div
  className="alert alert-danger"
  role="alert"
>
  <p>
    <span
      className="font-weight-bold"
    >
      Error!
    </span>
  </p>
</div>
`;
